<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ResetPasswordActivity">

<!--    &lt;!&ndash; Login progress &ndash;&gt;
    <ProgressBar
        android:id="@+id/preset_pwd_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />-->
    <ScrollView
        android:id="@+id/reset_password_form_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/reset_password_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--  register phone number -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_pwd_phone_number"
                    style="@style/PhoneNumberStyle"
                    />
                <TextView
                    android:id="@+id/reset_pwd_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/PhoneNumberStyle"
                    android:textSize="15dp"
                    android:text="19919878084"
                    android:textStyle="bold"
                    />
            </LinearLayout>

            <!--  new password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/new_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/new_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

          <!--  confirm password-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/comfirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_new_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
        <!--    sms code-->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:id="@+id/reset_pwd_sms_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/sms_code"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_toLeftOf="@+id/get_reset_pwd_sms_code"
                        />

                    <Button
                        android:id="@+id/get_reset_pwd_sms_code"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:text="@string/request_sms_code"
                        android:layout_alignParentRight="true"
                        android:textSize="12dp"
                        />
                </RelativeLayout>


            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/reset_pwd_submit_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/submit"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>