<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CloudPhotosActivity">-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <LinearLayout
                android:id="@+id/toolbar_normal_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toolBar"
                android:src="@mipmap/ic_launcher"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="5dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_cloud_photos"
                style="@style/TitleStyle"
                />
            </LinearLayout>
           <!-- RelativeLayout-->
            <RelativeLayout
                android:id="@+id/toolbar_select_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
                <ImageView
                    android:id="@+id/cloud_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_close_clear_cancel"
                    android:layout_alignParentLeft="true"
                    />
                <!--android:layout_centerHorizontal="true"-->
                <TextView
                    android:id="@+id/cloud_select_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/cloud_cancel"
                    android:text="@string/pls_select"
                    android:layout_marginLeft="@dimen/layout_margin_left"
                    style="@style/TitleStyle"
                    />
            <!--    android:layout_marginRight="@dimen/backup_button_margin_right"
            android:layout_alignParentRight="true"
            android:gravity="center_horizontal"
                         android:layout_marginRight="@dimen/select_all_item_margin_right"
                          android:layout_marginLeft="@dimen/select_all_item_margin_left"
            -->
                <TextView
                    android:id="@+id/cloud_select_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_all"
                    android:layout_toRightOf="@+id/cloud_select_number"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:layout_marginLeft="100dp"
                    style="@style/TitleStyle"
                    />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/smart_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <tech.xiaosuo.com.phontomanager.swipelib.SwipeMenuListView
            android:id="@+id/cloud_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cloud_select_bottom_layout"
            android:layout_alignParentTop="true"
            android:divider="@null"
        />
        <LinearLayout
            android:id="@+id/cloud_select_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/cloud_bottom_height"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical"
            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/cloud_delete"
                style="@style/CloudBottomImageStyle"
                android:src="@android:drawable/ic_menu_delete"
                />
            <ImageView
                android:id="@+id/cloud_download"
                style="@style/CloudBottomImageStyle"
                android:src="@mipmap/ic_menu_download"
                />
        </LinearLayout>
    </RelativeLayout>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
    </LinearLayout>
<!--
</android.support.constraint.ConstraintLayout>-->
